# spin-snow

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
assets/: Snowman.mtl  hammer.mtl  snowflakes.mtl  snowmanfirstperson.mtl
assets/icehouse/: icehouse.mtl
ports/glad/: portfile.cmake
shaders/: debug.frag  debug.vert  default.frag  default.vert  dot_light.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  transparency.frag
src/: CammerMoveControler.cc  CammerMoveControler.h  FirstPersonalMoveControler.cc  FirstPersonalMoveControler.h  MoveControler.h  SnowmanMoveControler.cc  SnowmanMoveControler.h  camera.cc  camera.h  light.h  main.cc  material.h  mesh.cc  mesh.h  model.cc  model.h  shader.cc  shader.h  utils.cc  utils.h
